2008-11-21  Dave Morrison  <drm@finkproject.org>

	* dist-module.pl: update the sourceforge mirrors

2007-10-24  Dave Morrison  <drm@finkproject.org>

	* dist-module.pl: place $suffix before .info in the filename

2006-06-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* dist-module.pl: don't throw an error if the module has no *.info.in
	file (such as dists/10.4 or script/10.4-update)

2006-05-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* dist-module.pl: change default CVS repository (and distribution)

2006-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* dist-module.pl: Use the new arguments to 
	Fink::Bootstrap::modify_description.