@@ -1,3 +1,7 @@
+2009-05-12  Dave Morrison  <drm@finkproject.org>
+
+	* dist-module.pl: include fink-x86_64.info among the generated files
+
 2008-11-21  Dave Morrison  <drm@finkproject.org>
 
 	* dist-module.pl: update the sourceforge mirrors
